<resources>
    <string name="app_name">Managenix</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="todo">todo</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="confirm_password">confirm_password</string>
    <string name="email_id_college_email">email_id_college_email</string>
    <string name="email_id_personal_email">email_id_personal_email</string>
    <string name="first_name">first_name</string>
    <string name="surname">surname</string>
    <string name="submit">submit</string>
    <string name="register1">Register</string>
    <string name="surname1">Surname</string>
    <string name="firstname">First name</string>
    <string name="Firstname">First name</string>
    <string name="Emailid">Email id(Personal Email)</string>
    <string name="emailid1">Email id (Colllege email)</string>
    <string name="Confirmpassword">Confirm Password</string>
    <string name="password1">Password</string>
    <string name="username1">Username</string>
    <string name="password2">Password</string>
    <string name="username2">Username</string>
    <string name="Department">Department</string>
    <string name="Placementcell">Placement Cell</string>
    <string name="fee_management">Fee Management</string>
    <string name="dashboard">Dashboard</string>
    <string name="underline_programmatically">UnderLine programmatically</string>
    <string name="dashboard1">Dashboard</string>
    <string name="mechanical" />
    <string name="computer" />
    <string name="electronics" />
    <string name="department1" />
    <string name="it" />
    <string name="computer1">computer</string>
    <string name="it1">it</string>
    <string name="electronics1">electronics</string>
    <string name="mechanical1">mechanical</string>
    <string name="phone_no1" />
    <string name="next" />
    <string name="date_of_birth" />
    <string name="religion" />
    <string name="nationality" />
    <string name="indian_etc" />
    <string name="permanent_address" />
    <string name="father_s_name" />
    <string name="mother_s_name" />
    <string name="student_name" />
    <string name="student_profile" />
    <string name="submit1">Submit</string>
    <string name="gender">Gender</string>
    <string name="bloodgroup">Bloodgroup</string>
    <string name="age_for_eg_18">Age (for eg : 18)</string>
    <string name="student_profile1">Student Profile</string>
    <string name="student_name1">Student Name</string>
    <string name="mother_s_name1">Mother\'s Name</string>
    <string name="father_s_name1">Father\'s Name</string>
    <string name="permanent_address1">Permanent Address</string>
    <string name="nationality_for_eg_indian1">Nationality (for eg : Indian)</string>
    <string name="religion1">Religion</string>
    <string name="date_of_birth1">Date Of Birth</string>
    <string name="next1">Next</string>
    <string name="phone_no">Phone No</string>
    <string name="email_id_personal_email1">Email id (Personal Email)</string>
    <string name="parent_guardian_details">Parent/Guardian Details</string>
    <string name="father_s_name2">Father\'s Name</string>
    <string name="mother_s_name2">Mother\'s Name</string>
    <string name="father_s_phone_no1">Father\'s Phone No.</string>
    <string name="mother_s_phone_no">Mother\'s Phone No.</string>
    <string name="father_s_occupation">Father\'s Occupation</string>
    <string name="mother_s_occupation">Mother\'s Occupation</string>
    <string name="hsc_marks_in_english">HSC (Marks in English)</string>
    <string name="department">Department</string>
    <string name="first_name_student_s_name">First Name (Student\'s Name)</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="father_s_phone_no">Father\'s Phone No.</string>
    <string name="mother_s_phone_no1">Mother\'s Phone No</string>
    <string name="hsc_marks_in_chemistry">HSC (Marks in Chemistry)</string>
    <string name="hsc_marks_in_physics">HSC (Marks in Physics)</string>
    <string name="hsc_marks_in_maths">HSC (Marks in Maths)</string>
    <string name="academic_details">Academic Details</string>
    <string name="branch_for_eg_computer_etc">Branch (for eg : Computer ,etc)</string>
    <string name="semester_for_eg_sem_1">Semester (for Eg : Sem 1)</string>
    <string name="roll_no_06">Roll No. (06)</string>
    <string name="ssc_percentage">SSC Percentage %</string>
    <string name="hsc_percentage">HSC Percentage %</string>
    <string name="mht_cet_percentile">MHT-CET Percentile %</string>
    <string name="jee_percentile">JEE Percentile %</string>
    <string name="date_of_admission_dd_mm_yyyy">Date Of Admission (DD/MM/YYYY)</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
</resources>