<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="124dp"
        android:layout_marginBottom="37dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dbit_mumbai_logo"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="18dp"
        android:hint="@string/username2"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <EditText
            android:id="@+id/Username"
            android:layout_width="290dp"
            android:layout_height="64dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="17dp"
        android:hint="Password"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <EditText
            android:id="@+id/Password"
            android:layout_width="290dp"
            android:layout_height="64dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Login"
        android:layout_width="86dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:background="@drawable/purple_gradient_button"
        app:layout_constraintBottom_toTopOf="@+id/Register"
        app:layout_constraintEnd_toEndOf="@+id/Register"
        app:layout_constraintStart_toStartOf="@+id/Register"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/Register"
        android:layout_width="86dp"
        android:layout_height="50dp"
        android:layout_marginBottom="145dp"
        android:text="REGISTER"
        android:textColor="@android:color/black"
        android:background="@drawable/purple_gradient_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/FACULTY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login"
        app:rippleColor="#FFFFFF" />

    <TextView
        android:id="@+id/FACULTY"
        android:layout_width="117dp"
        android:layout_height="20dp"
        android:text="Login as Faculty!!"
        android:textColor="#000000"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register"
        app:textAllCaps="false"
        tools:ignore="UnknownId" />


</androidx.constraintlayout.widget.ConstraintLayout>